Revision history for CGI-Info

0.90
	Ensure status is set before calling _warn so it's not lost (some 403s were being lost)

0.89	Tue Jan 14 15:45:16 EST 2025
	Fix http://www.cpantesters.org/cpan/report/048c5109-6c77-1014-8029-e79fc7de0390

0.88	Mon Jan 13 09:33:24 EST 2025
	Improved arg checking
	Merge https://github.com/nigelhorne/CGI-Info/pull/21 (plicease)
	Added _get_env()

0.87	Wed Dec 18 11:06:09 EST 2024
	Test warnings()
	Allow the logger to be a ref to code
	Fix is_mobile() default return code
	Added t/30-basics.t
	upload_dir must now be in, or a subdir of, tmpdir()

0.86	Mon Nov 25 09:17:30 EST 2024
	Ensure correct message is logged on SQL injection attempt
	Remember warnings in the warnings array - added warnings() method

0.85	Sun Nov 17 09:49:52 EST 2024
	Send back HTTP code 422 when argument fails "allow"
	Added come comments and small optimisations
	new(): Use Scalar::Util to verify it's an object
	Refactor AUTOLOAD
	Avoid re-importing modules
	Refactor status() and cookie() and add more tests
	Added t/as_string.t

0.84	Fri Oct 18 08:21:05 EDT 2024
	Intercept SQL Injection
		entry=-4346" OR 1749\=1749 AND "dgiO"\="dgiO;page=people
	Use Test::DescribeMe to simplify tests
	Don't fail on systems that Test::Script fails to install on (e.g. Haiku)

0.83	Sun  8 Sep 08:52:23 EDT 2024
	Mark Go-http-client as a robot
	Support CircleCI
	Fix t/script.t which failed on some platforms
	Use gtar to create a distribution on Macs
	Mark 'expect' as deprecated

0.82	Thu Aug  8 07:51:02 EDT 2024
	Mark ClaudeBot as a robot
	Mark YaK/1.0 as a robot
	Mark trendictionbot as a robot
	Added helper routine _get_params() and use it

0.81	Tue Apr  9 10:08:29 EDT 2024
	Use Test::Needs
	Added t/version.t
	Added t/tabs.t
	Mark axios/1.6.7, ias_crawler and ZoominfoBot as robots
	Block "/**/ORDER/**/BY/**/" in the argument
	Strip NUL byte poison

0.80	Fri Jan 19 08:05:29 EST 2024
	Added documentroot() as a synonym to rootdir()
		For compatibility with Apache