@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.90
 	Ensure status is set before calling _warn so it's not lost (some 403s were being lost)
+	Try harder to call Google a search_engine
 
 0.89	Tue Jan 14 15:45:16 EST 2025
 	Fix http://www.cpantesters.org/cpan/report/048c5109-6c77-1014-8029-e79fc7de0390
